<resources>
    <string name="app_name">Ask Acharya</string>
    <string name="home">Home</string>
    <string name="today_calendar">Today\'s Calendar</string>
    <string name="wisdom">Wisdom</string>
    <string name="more">More</string>
    <string name="ask">Ask Questions</string>
    <string name="about_pandit_jee">About Acharya</string>
    <string name="app_setting">App Setting</string>
    <string name="admin_only">Admin Only</string>
    <string name="app_info">App Info</string>
    <string name="follow_at">Follow at</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="push_over_main">Push Data Over Home</string>
    <string name="push_over_calendar">Push Data Over Calendar</string>
    <string name="push_over_wisdom">Push Data Over Wisdom</string>
    <string name="reply_question">Reply Question</string>
    <string name="email">Email</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="pls_wait">Please Wait</string>
    <string name="add_admin">Add Admin</string>
    <string name="add_photo">Add Photo</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="enable_permission">Enable</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_message">Looks like you have denied the permission please enable it</string>
    <string name="dialog_title">Enable Denied Permission:(</string>
    <string name="event_String">Add Event</string>
    <string name="event_title">Event Title</string>
    <string name="event_date">Event Date</string>
    <string name="event_place">Place</string>
    <string name="date_cannot_be_empty">Date Can\'t Be Empty</string>
    <string name="event_added_successfully">Event Added Successfully</string>
    <string name="add_pandits">Add Pandits</string>
    <string name="add_pandit_jee_name">Pandit Jee\'s Name</string>
    <string name="pandit_jee_description">Pandit Jee Description</string>
    <string name="pandit_jee_added_successfully">Pandit Jee Added Successfully</string>
    <string name="wisdom_title">Article Title</string>
    <string name="wisdom_message">Article</string>
    <string name="add_article">Add Article</string>
    <string name="blank_alert">Name and description can not be left blank</string>
    <string name="wisdom_blank_alert">Title and body can\'t be left blank</string>
    <string name="article_added_successfully">Article Added Successfully</string>
    <string name="notification_setting">Notification Setting</string>
    <string name="language_setting">Language Setting</string>
    <string name="feedback">Feedback</string>
    <string name="contact_us">Contact Us</string>
    <string name="language_hindi">हिन्दी</string>
    <string name="language_english">English</string>
    <string name="restart_app">Restart App</string>
    <string name="restart_app_message">Restart app to apply your selected language effectively</string>
    <string name="restart">Restart</string>
    <string name="language_already_set">Language already set to english</string>
    <string name="final_summit">Final Submit</string>
    <string name="add_one_more">Select One More Image</string>
    <string name="add_two_more">Select Two More Images</string>
    <string name="photo_added">Photo Added</string>
    <string name="click_final_submit">Click Final Submit</string>
    <string name="final_submit_done">Final Submit Done</string>
    <string name="name">Name</string>
    <string name="description">Specialization</string>
    <string name="pandit_jee">Read About Pandit Jee</string>
    <string name="latest_article">Latest Article</string>
    <string name="view_all"><![CDATA[View All   >]]></string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="ask_question">Ask Question</string>
    <string name="question_title">Question Title</string>
    <string name="drop_question">Drop Your Question Here</string>
    <string name="your_image">Your Image</string>
    <string name="post">Post</string>
    <string name="title_cannot_be_empty">Title can\'t be left blank</string>
    <string name="question_cannot_be_empty">Question can\'t be left blank</string>
    <string name="profile">Profile</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name_blank">Name Can\'t be left Blank</string>
    <string name="email_blank">Enter The Email Address</string>
    <string name="pls_confirm_password">Please Confirm The Password</string>
    <string name="enter_pass">Enter Password</string>
    <string name="alert">Alert!!</string>
    <string name="you_have_not_added">You have not added any profile image. Do you want to continue?</string>
    <string name="yes">Yes</string>
    <string name="validate_color">Validate Email</string>
    <string name="this_email_is_already_admin">This email is already admin</string>
    <string name="congrats">Congrats! You are Admin Now</string>
    <string name="only_admin_can">Only admin can access this feature</string>
    <string name="wrong_pass_confirmation">Wrong Password Confirmation</string>
    <string name="answer">Answer</string>
    <string name="enter_reply">Enter Reply</string>
    <string name="reply_sent">Reply Sent</string>
    <string name="languagePref" translatable="false">language_set</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="clicking_yes">Clicking yes will delete your question.</string>
    <string name="want_to_delete">Are you sure?</string>
    <string name="question_deleted">Question Deleted</string>
    <string name="choose_action">Choose Action</string>
    <string name="update">Update</string>
    <string name="question_successfully_edited">Question Successfully Edited</string>
    <string name="no_data_available_to_show">No data available to show</string>
    <string name="press_and_hold">Press and hold for choose action menu</string>
    <string name="search">Search</string>
    <string name="clicking_yes_reply">Clicking yes will delete your reply.</string>
    <string name="videos">Videos</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="channel_person">Channel Thumbnail</string>
    <string name="subscribe">Go To Channel</string>
    <string name="wisdom_notification">New article notification</string>
    <string name="channel_description">Article notification on wisdom page</string>
    <string name="read">Read</string>
    <string name="notifications">Notifications</string>
    <string name="new_article_notification">New article notification</string>
    <string name="new_video_notification">New video notification</string>
    <string name="new_reply_notification">New reply notification</string>
    <string name="default_notification_id" translatable="false">russvkm</string>
    <string name="default_notification_channel_id" translatable="false">ask_acharya</string>
    <string name="fcmPrefWisdom" translatable="false">fcmPrefsWisdom</string>
    <string name="fcmPrefQuestion" translatable="false">fcmPrefQuestion</string>
    <string name="new_article_title">New Article</string>
    <string name="new_article_notification_body">New article arrived tap to explore</string>
    <string name="new_video_title">New Video</string>
    <string name="new_video_notification_body">New video arrived tap to explore</string>
    <string name="add_mob_id" translatable="false">ca-app-pub-9896054191523287~5036876168</string>
    <string name="add_mob_banner_id_more" translatable="false">ca-app-pub-9896054191523287/8436779717</string>
    <string name="brief_intro">A Brief Intro About Acharya jee</string>
    <string name="about_acharya">Acharya Rajendra Pandey jyotish karma kanda and mansagari</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="about_app">About Application</string>
    <string name="network_not_available">Network not available</string>
    <string name="could_not_connect">Couldn\'t connect to the network</string>
    <string name="refresh">Refresh</string>
    <string name="try_again">Try again</string>
    <string name="your_answer">Answer Detail</string>
    <string name="asked_by_image">Asked By Image</string>
    <string name="still_need_to_reply">Question is still not replied, we\'ll reply soon</string>
    <string name="asked_by">Asked By:-</string>
    <string name="logout">LOGOUT</string>
    <string name="you_are_already">You are already logged out</string>
    <string name="logout_message">By clicking yes you will be logged out</string>
    <string name="continue_logout">Do you want to continue?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in">SIGN IN</string>
    <string name="or">or</string>
    <string name="blank_password">Password cannot be left blank</string>
    <string name="pasword_length">Password must be six digit long</string>
    <string name="you_are_not_admin">You are not admin</string>
    <string name="update_profile">Update profile</string>
    <string name="choose_an_option">Choose an option</string>
    <string name="update_profile_image">Update profile image</string>
    <string name="update_profile_name">Update profile name</string>
    <string name="change_password">Change password</string>
    <string name="display_name">Display name</string>
    <string name="diff_name">Enter different name</string>
    <string name="select_image">Select Image</string>
    <string name="old_password">OLD PASSWORD</string>
    <string name="new_password">NEW PASSWORD</string>
    <string name="enter_old_password">Enter old password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="om_namah_shivay">ॐ नमः शिवाय</string>
    <string name="description_acharya">STAY CONNECTED WITH ACHARYA RAJENDRA PANDEY</string>
</resources>