<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/titleTextField"
      android:layout_width="match_parent"
      android:layout_margin="@dimen/dialog_text_padding"
      android:layout_height="wrap_content"
      android:hint="@string/event_title">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/titleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/eventDateTextField"
      android:layout_width="match_parent"
      android:layout_margin="@dimen/dialog_text_padding"
      android:layout_height="wrap_content"
      android:hint="@string/event_date">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/eventDateEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/placeTextField"
      android:layout_width="match_parent"
      android:layout_margin="@dimen/dialog_text_padding"
      android:layout_height="wrap_content"
      android:hint="@string/event_place">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/placeEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords" />
  </com.google.android.material.textfield.TextInputLayout>

  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/pushEventButton"
      android:layout_height="wrap_content"
      android:layout_width="match_parent"
      android:textSize="@dimen/more_fragment_text_size"
      android:text="@string/event_String"
      />

</LinearLayout>