<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/choose_action"
        android:gravity="center"
        android:textSize="@dimen/choose_action"
        android:textStyle="bold"
        android:padding="@dimen/message_text_margin"
        android:textColor="@android:color/white"
        android:background="@drawable/button_gradient"
        android:layout_margin="@dimen/message_text_margin"/>
    <TextView
        android:id="@+id/delete"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/delete"
        android:gravity="center"
        android:textSize="@dimen/choose_action"
        android:textStyle="bold"
        android:foreground="?attr/selectableItemBackground"
        android:layout_marginStart="@dimen/message_text_margin"
        android:layout_marginEnd="@dimen/message_text_margin"
        android:textColor="@android:color/black"
        android:background="@drawable/dialog_text_view_dialog"/>

    <TextView
        android:id="@+id/edit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/edit"
        android:gravity="center"
        android:foreground="?attr/selectableItemBackground"
        android:layout_marginStart="@dimen/message_text_margin"
        android:layout_marginEnd="@dimen/message_text_margin"
        android:textSize="@dimen/choose_action"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_marginBottom="@dimen/message_text_margin"
        android:background="@drawable/dialog_text_view_dialog"/>
</LinearLayout>