<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/questionTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:maxHeight="50dp"
        android:ems="10"
        android:inputType="textPersonName|textMultiLine"
        android:padding="@dimen/text_box_padding"
        android:hint="@string/question_title"
        android:layout_marginStart="@dimen/message_text_margin"
        android:layout_marginEnd="@dimen/message_text_margin"
        android:background="@drawable/edit_text_background"
        android:autofillHints="@string/question_title" />

    <EditText
        android:id="@+id/fullQuestion"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:hint="@string/drop_question"
        android:padding="@dimen/text_box_padding"
        android:layout_marginStart="@dimen/message_text_margin"
        android:layout_marginEnd="@dimen/message_text_margin"
        android:background="@drawable/edit_text_background"
        android:layout_marginTop="@dimen/card_margin_wisdom"
        android:autofillHints="@string/drop_question" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/message_text_margin"
        android:background="@drawable/button_background"
        android:textColor="@android:color/white"
        android:textSize="@dimen/post_size" />
</LinearLayout>