<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.VideoFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/channelCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/card_background_video"
        android:layout_marginStart="@dimen/video_recycler_view_margin"
        android:layout_marginTop="@dimen/video_recycler_view_margin"
        android:layout_marginEnd="@dimen/video_recycler_view_margin"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/channelImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/channel_person" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/channelTitleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/video_recycler_view_margin"
                    android:textColor="@color/to_be_final_name_text_color_video"
                    android:gravity="center"
                    android:textSize="@dimen/channel_title_size"
                    android:textStyle="bold"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/channelButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:layout_margin="@dimen/video_recycler_view_margin"
                    android:background="@android:color/holo_red_dark"
                    android:padding="@dimen/video_recycler_view_margin"
                    android:text="@string/subscribe"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"/>
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/videoRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="visible"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/unableToConnect"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/network_state_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.221">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:contentDescription="@string/network_not_available"
                android:src="@drawable/ic_network_error" />
        </FrameLayout>

        <TextView
            android:id="@+id/couldNot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/could_not_connect_background"
            android:padding="@dimen/connect_padding"
            android:text="@string/could_not_connect"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_view_could_not_connect"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout"
            app:layout_constraintVertical_bias="0.045" />

        <LinearLayout
            android:id="@+id/refreshButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/could_not_connect_background"
            android:orientation="horizontal"
            android:foreground="?attr/selectableItemBackground"
            android:padding="@dimen/refresh_button_padding"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/couldNot"
            app:layout_constraintVertical_bias="0.087">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/refresh_margin_end"
                android:contentDescription="@string/refresh"
                android:src="@drawable/refresh"
                tools:layout_editor_absoluteX="171dp"
                tools:layout_editor_absoluteY="431dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/try_again"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>